[gd_scene load_steps=8 format=3 uid="uid://ra5s5iyi0nnt"]

[ext_resource type="Script" uid="uid://cn26hw0mq5wki" path="res://menus/options.gd" id="1_wh5f2"]
[ext_resource type="Texture2D" uid="uid://bugjtqov40k3d" path="res://menus/close.png" id="2_y5lkn"]
[ext_resource type="Texture2D" uid="uid://d1y4e8dpmvjy8" path="res://menus/close_hover.png" id="3_d25ke"]
[ext_resource type="Texture2D" uid="uid://mb8ty0jabtjm" path="res://menus/close_focus.png" id="4_ygsvy"]
[ext_resource type="StyleBox" uid="uid://ydpljdxtg8r4" path="res://styles/style_line.tres" id="5_0u0pl"]
[ext_resource type="Script" uid="uid://c57ak7282wp2n" path="res://menus/general_settings.gd" id="6_2xfgh"]
[ext_resource type="Script" uid="uid://upscgb2xcq25" path="res://menus/control_settings.gd" id="7_wrdoa"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wh5f2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="GeneralSettingsButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../CloseButton")
focus_neighbor_right = NodePath("../ControlSettingsButton")
text = "General"

[node name="ControlSettingsButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../GeneralSettingsButton")
focus_neighbor_right = NodePath("../CloseButton")
text = "Controls"

[node name="CloseButton" type="TextureButton" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
focus_neighbor_left = NodePath("../ControlSettingsButton")
focus_neighbor_right = NodePath("../GeneralSettingsButton")
texture_normal = ExtResource("2_y5lkn")
texture_pressed = ExtResource("3_d25ke")
texture_hover = ExtResource("3_d25ke")
texture_focused = ExtResource("4_ygsvy")
stretch_mode = 4

[node name="Divider" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = ExtResource("5_0u0pl")

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="GeneralSettings" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20
script = ExtResource("6_2xfgh")

[node name="SoundSettingsLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/GeneralSettings"]
layout_mode = 2
text = "Volumes"

[node name="SoundSettings" type="GridContainer" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/GeneralSettings"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 10
columns = 2

[node name="MasterSliderLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/GeneralSettings/SoundSettings"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Master	"
vertical_alignment = 1

[node name="MasterSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/GeneralSettings/SoundSettings"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.1
value = 1.0
ticks_on_borders = true

[node name="MusicSliderLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/GeneralSettings/SoundSettings"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Music"
vertical_alignment = 1

[node name="MusicSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/GeneralSettings/SoundSettings"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.1
value = 1.0
ticks_on_borders = true

[node name="AmbientSliderLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/GeneralSettings/SoundSettings"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Ambient"
vertical_alignment = 1

[node name="AmbientSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/GeneralSettings/SoundSettings"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.1
value = 1.0
ticks_on_borders = true

[node name="SoundSliderLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/GeneralSettings/SoundSettings"]
layout_mode = 2
theme_type_variation = &"GraphFrameTitleLabel"
theme_override_font_sizes/font_size = 24
text = "Sound"
vertical_alignment = 1

[node name="SoundSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/GeneralSettings/SoundSettings"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.1
value = 1.0
ticks_on_borders = true

[node name="Divider" type="Label" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/GeneralSettings"]
layout_mode = 2

[node name="TextSettingsLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/GeneralSettings"]
layout_mode = 2
text = "Text"

[node name="TextSettings" type="GridContainer" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/GeneralSettings"]
layout_mode = 2
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 10
columns = 2

[node name="TTSCheckLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/GeneralSettings/TextSettings"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Use text-to-speech over screen-reader"
vertical_alignment = 1

[node name="TTSCheck" type="CheckButton" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/GeneralSettings/TextSettings"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_constants/h_separation = 20
theme_override_font_sizes/font_size = 28
alignment = 1
icon_alignment = 1

[node name="DescribeSoundLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/GeneralSettings/TextSettings"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Show text describing sounds and music"
vertical_alignment = 1

[node name="DescribeSound" type="CheckButton" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/GeneralSettings/TextSettings"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_constants/h_separation = 20
theme_override_font_sizes/font_size = 28
alignment = 1
icon_alignment = 1

[node name="Divider2" type="Label" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/GeneralSettings"]
layout_mode = 2

[node name="GraphicSettingsLabel2" type="Label" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/GeneralSettings"]
layout_mode = 2
text = "Graphics"

[node name="GraphicSettings" type="GridContainer" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/GeneralSettings"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 10
columns = 2

[node name="BrightnessSliderLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/GeneralSettings/GraphicSettings"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Brightness"
vertical_alignment = 1

[node name="BrightnessSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/GeneralSettings/GraphicSettings"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_vertical = 1
ticks_on_borders = true

[node name="Divider3" type="Label" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/GeneralSettings"]
layout_mode = 2

[node name="ControlSettings" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20
script = ExtResource("7_wrdoa")

[node name="KeyBindingsLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ControlSettings"]
layout_mode = 2
text = "Key bindings"

[node name="KeyBindings" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ControlSettings"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ResetAllButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ControlSettings"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Reset all"

[node name="Divider3" type="Label" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ControlSettings"]
layout_mode = 2

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/GeneralSettingsButton" to="." method="_on_general_settings_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/ControlSettingsButton" to="." method="_on_control_settings_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/ScrollContainer/GeneralSettings/SoundSettings/MasterSlider" to="Panel/MarginContainer/VBoxContainer/ScrollContainer/GeneralSettings" method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/ScrollContainer/GeneralSettings/SoundSettings/MusicSlider" to="Panel/MarginContainer/VBoxContainer/ScrollContainer/GeneralSettings" method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/ScrollContainer/GeneralSettings/SoundSettings/AmbientSlider" to="Panel/MarginContainer/VBoxContainer/ScrollContainer/GeneralSettings" method="_on_ambient_slider_value_changed"]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/ScrollContainer/GeneralSettings/SoundSettings/SoundSlider" to="Panel/MarginContainer/VBoxContainer/ScrollContainer/GeneralSettings" method="_on_sound_slider_value_changed"]
[connection signal="toggled" from="Panel/MarginContainer/VBoxContainer/ScrollContainer/GeneralSettings/TextSettings/TTSCheck" to="Panel/MarginContainer/VBoxContainer/ScrollContainer/GeneralSettings" method="_on_tts_check_toggled"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/ScrollContainer/ControlSettings/ResetAllButton" to="Panel/MarginContainer/VBoxContainer/ScrollContainer/ControlSettings" method="_on_reset_all_button_pressed"]
